--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- Emoji Favicon using data URI -->
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🗡️</text></svg>"
+    />
+
+    <!-- Title + Meta -->
+    <title>SLATEWARE™</title>
+    <meta
+      name="description"
+      content="SLATEWARE™ - Modern Clothing E-commerce"
+    />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        margin: 0;
+        font-family: "Inter", sans-serif;
+        background-color: #000;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
