--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,11 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- ✅ Google Identity Services script -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+    <!-- Main app entry -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
